# read-margin-temp

./: .gitignore  Makefile.am  README.md  conf.hpp  configure.ac  main.cpp  meson.build
conf/: conf.cpp  conf.hpp
dbus/: dbus.cpp  dbus.hpp
example/: example.json
json/: buildjson.cpp  buildjson.hpp
sensor/: sensor.cpp  sensor.hpp
util/: util.cpp  util.hpp
